--- a/SunamoGitConfig.csproj
+++ b/SunamoGitConfig.csproj
@@ -3,9 +3,9 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>24.11.9.1</Version>
+    <Version>24.11.12.1</Version>
     <Description>Serializer and deserializer for .git config files</Description>
-    <PackageReleaseNotes>Not throwing exception </PackageReleaseNotes>
+    <PackageReleaseNotes>Fix empty string for spaces</PackageReleaseNotes>
     <Authors>www.sunamo.cz</Authors>
     <Copyright>www.sunamo.cz</Copyright>
     <PackageReadmeFile>readme.md</PackageReadmeFile>
