--- a/SunamoGitConfig/SunamoGitConfig.csproj
+++ b/SunamoGitConfig/SunamoGitConfig.csproj
@@ -3,7 +3,7 @@
     <TargetFrameworks>net10.0;net9.0;net8.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>25.12.31.1</Version>
+    <Version>26.1.1.170</Version>
     <Description>Serializer and deserializer for .git config files</Description>
     <PackageReleaseNotes>feat: better naming for variables</PackageReleaseNotes>
     <Authors>www.sunamo.cz</Authors>
@@ -22,10 +22,10 @@
   </ItemGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>$(DefineConstants);ASYNC</DefineConstants>
-    <NoWarn>CA1822;CS1573;CS1572;CS1570;CA1866;CA1865;CA1867;CS1998;CA1847;IDE0066</NoWarn>
+    <NoWarn></NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DefineConstants>$(DefineConstants);ASYNC</DefineConstants>
-    <NoWarn>CA1822;CS1573;CS1572;CS1570;CA1866;CA1865;CA1867;CS1998;CA1847;IDE0066</NoWarn>
+    <NoWarn></NoWarn>
   </PropertyGroup>
 </Project>
